* :ref:`Version 4.10 <version-4.10>`

.. _java-version-5.3:

What's New in 5.3
-----------------

The 5.3 driver release includes the following changes, fixes,
and features:

.. sharedinclude:: dbx/jvm/v5.3-wn-items.rst

   .. replacement:: vector-type-example-link

      To learn about how to use this type when using the Atlas
      Vector Search feature, see the TODO add link :ref:`` guide.

- Adds a client bulk write API that allows you to perform write operations on multiple
  databases and collections at once. To learn more about this feature, see the
  :ref:`java-sync-client-bulk-write` section of the Bulk Operations guide.

.. _java-version-5.2.1:

What's New in 5.2.1
-------------------

The 5.2.1 driver patch release includes the following changes:

- Fixes an issue that caused applications built with Quarkus to throw a
  ``java.lang.UnsatisfiedLinkError`` when initializing ``libmongocrypt``
  bindings.
- Fixes a bug that caused the ``mongodb-driver-core`` package to error when
  deployed to an OSGi runtime. The `` Import-Package
  org.mongodb:mongodb-driver-core`` manifest attribute no longer requires the
  ``com.oracle.svm.core.annotate.*`` packages.

.. _java-version-5.2:

What's New in 5.2
-----------------

.. important:: Removal of Support for {+mdb-server+} 3.6

   {+driver-short+} v5.2 removes support for {+mdb-server+} 3.6. To
   learn more about compatible versions of the server, see
   :ref:`java-compatibility-tables`.

The 5.2 driver release includes the following changes, fixes,
and features:

- A forward-slash (``/``) character between the host names and client
  options in a connection URI is optional. The driver parses the
  following connection URI examples in the same way:

  .. code-block:: java
     
     // Connection URI with delimiting forward-slash
     String uri = "mongodb://example.com/?w=majority";

     // Connection URI without delimiting forward-slash
     String uri = "mongodb://example.com?w=majority";
