@@ -44,7 +44,7 @@ Update
 
 Update operations can modify fields and values. They apply changes
 specified in an update document to one or more documents that match your
-query filter. 
+query filter.
 
 The `updateOne() <{+api+}/apidocs/mongodb-driver-sync/com/mongodb/client/MongoCollection.html#updateOne(org.bson.conversions.Bson,org.bson.conversions.Bson)>`__
 method changes the first document your query filter matches and the
@@ -66,21 +66,53 @@ Update Operation Parameters
 The ``updateOne()`` and ``updateMany()`` methods both have the following
 parameters:
 
-- ``query`` specifies a query filter with the criteria to match documents to update in your collection
-- ``updateDocument`` specifies the fields and values to modify in the matching document or documents. For this example, we use the :doc:`Updates builder </fundamentals/builders/updates>` to create the update document.
+- ``query`` specifies a query filter with the criteria to match
+  documents to update in your collection.
+- ``update`` specifies the fields and values to modify in the matching
+  document or documents. For this example, we use the :doc:`Updates
+  builder </fundamentals/builders/updates>` to create the update
+  document.
+- *(Optional)* ``updateOptions`` specifies options that you can set to
+  customize how the driver performs the update operation.
 
 You can create the ``updateDocument`` using an ``Updates`` builder as
 follows:
 
 .. code-block:: java
 
-    Bson updateDocument = Updates.operator(field, value);
+    Bson updateDocument = Updates.operator(<field>, <value>);
 
 See the MongoDB API documentation for a `complete list of
-Updates builders and their usage <{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/Updates.html>`__.
+Updates builders and their usage
+<{+api+}/apidocs/mongodb-driver-core/com/mongodb/client/model/Updates.html>`__.
 
-Example
-```````
+Update One Example
+~~~~~~~~~~~~~~~~~~
+
+The following example demonstrates how to change the value of the
+``color`` field in the first matching document in which the value of
+``qty`` is ``0``:
+
+.. literalinclude:: /includes/fundamentals/code-snippets/Update.java
+   :language: java
+   :dedent:
+   :start-after: begin updateOneExample
+   :end-before: end updateOneExample
+
+If multiple documents match the query filter specified in
+the ``updateOne()`` method, it replaces the first result. You can
+specify a sort in an ``UpdateOptions`` instance to apply an order to
+matched documents before the driver performs the replace operation, as
+shown in the following code:
+
+.. literalinclude:: /includes/fundamentals/code-snippets/Update.java
+   :language: java
+   :dedent:
+   :start-after: begin updateoptions
+   :end-before: end updateoptions
+
+Update Many Example
+~~~~~~~~~~~~~~~~~~~
 
 The paint store receives a fresh shipment and needs to update their inventory.
 The shipment contains 20 cans of each paint color.
@@ -88,8 +120,8 @@ The shipment contains 20 cans of each paint color.
 To update the inventory, call the ``updateMany()`` method specifying the
 following:
 
-- A query filter that matches all the colors 
-- An update document that contains instructions to increment the ``qty`` field by "20"
+- A query filter that matches all the colors
+- An update document that contains instructions to increment the ``qty`` field by ``20``
 
 .. literalinclude:: /includes/fundamentals/code-snippets/Update.java
    :language: java
@@ -157,10 +189,13 @@ Replace Operation Parameters
 The ``replaceOne()`` method has the following parameters:
 
 - ``query`` specifies a query filter with the criteria to match a document to replace in your collection
-- ``replacementDocument`` specifies fields and values of a new ``Document`` object to replace in the matched document 
+- ``replacement`` specifies fields and values of a new ``Document``
+  object to replace in the matched document
+- *(Optional)* ``replaceOptions`` specifies options that you can set to
+  customize how the driver performs the replace operation
 
-Example
-```````
+Replace One Example
+~~~~~~~~~~~~~~~~~~~
 
 The paint store realizes they must update their inventory again.  What they
 thought was 20 cans of pink paint is actually 25 cans of orange paint. 
@@ -192,14 +227,23 @@ The following shows the updated document:
 
     { "_id": 5, "color": "orange", "qty": 25 }
 
+If multiple documents match the query filter specified in
+the ``replaceOne()`` method, it replaces the first result. You can
+specify a sort in a ``ReplaceOptions`` instance to apply an order to
+matched documents before the driver performs the replace operation, as
+shown in the following code:
+
+.. literalinclude:: /includes/fundamentals/code-snippets/Update.java
+   :language: java
+   :dedent:
+   :start-after: begin replaceoptions
+   :end-before: end replaceoptions
+
 If zero documents match the query filter in the replace operation,
 ``replaceOne()`` makes no changes to documents in the collection. See
 our :doc:`upsert guide </fundamentals/crud/write-operations/upsert>` to
 learn how to insert a new document instead of replacing one if no
-documents match. 
-
-If multiple documents match the query filter specified in
-the ``replaceOne()`` method, it replaces the first result. 
+documents match.
 
 .. important::
 
@@ -208,4 +252,3 @@ the ``replaceOne()`` method, it replaces the first result.
     For more information about constraints on unique indexes,
     see :manual:`Unique Indexes </core/index-unique/>` in the
     {+mdb-server+} manual.
-
