@@ -45,6 +45,10 @@ and features:
       To learn about how to use this type when using the Atlas
       Vector Search feature, see the TODO add link :ref:`` guide.
 
+   .. replacement:: update-replace-example-link
+      
+      the :ref:`java-fundamentals-change-document` guide
+
 - Adds a client bulk write API that allows you to perform write operations on multiple
   databases and collections at once. To learn more about this feature, see the
   :ref:`java-sync-client-bulk-write` section of the Bulk Operations guide.
